src/test/deca/context/invalid/test_pass_2_field_already_declare.deca
// Description:
//    Program testing pass 2, declare 2 times a field with the same name
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025


class Test{
    int x;

    boolean x;
}

